# cicn-nrs

./: Describtion for amend.txt  Description for amend.txt  README.md
ccnxMS-Server/: Makefile  ccnxNRS_Common.c  ccnxNRS_Common.h  ccnxPing_Stats.c  ccnxReg_Server.c  server.keystore
ccnxReg-Client/: Makefile  ccnxPing_Common.c  ccnxPing_Common.h  ccnxPing_Stats.c  ccnxPing_Stats.h  ccnxReg_Client.c  client.keystore
ccnxReg-Client/config/: ValueName.txt
ccnxSimpleFileTransfer/: CMakeLists.txt  README.md  ccnxSimpleFileTransfer_ChunkList.c  ccnxSimpleFileTransfer_ChunkList.h  ccnxSimpleFileTransfer_Client.c  ccnxSimpleFileTransfer_Common.c  ccnxSimpleFileTransfer_Common.h  ccnxSimpleFileTransfer_FileIO.c  ccnxSimpleFileTransfer_FileIO.h  ccnxSimpleFileTransfer_Server.c
ccnxlibs/libccnx-common/ccnx/common/: ccnx_ContentObject.c  ccnx_ContentObject.h  ccnx_Interest.c  ccnx_Interest.h  ccnx_InterestPayloadId.c  tags
ccnxlibs/libccnx-common/ccnx/common/codec/: .ccnxCodec_TlvEncoder.c.swo  ccnxCodec_TlvDecoder.h  ccnxCodec_TlvEncoder.c  ccnxCodec_TlvPacket.c
ccnxlibs/libccnx-common/ccnx/common/internal/: .ccnx_ContentObjectFacadeV1.h.swp  .ccnx_MessageInterface.h.swp  ccnx_ContentObjectFacadeV1.c  ccnx_ContentObjectInterface.h  ccnx_InterestFacadeV1.c  (+4 more)
cframework/libparc/parc/security/: parc_SecureRandom.c  parc_SecureRandom.h
libicnet/apps/general/: icnet_general_test.cc
libicnet/icnet/transport/: icnet_transport_vegas_rto_estimator.h
sb-forwarder/: tags
sb-forwarder/metis/ccnx/: tags
sb-forwarder/metis/config/: MSname.txt  ccnx_metis.conf
(+25 files in other folders)
